added style to page and updated html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>Limoncito</title>
     <meta name="description" content="A brief description">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts/googleapis.com/css2?family=Markazi+Text">
 </head>
 
@@ -31,8 +31,10 @@
     </nav>
     <main>
         <section>
-            <article>
+            <article class="top-article">
+                
                 <h1>New menu items!</h1>
+                <img src="/img/snacks.jpg">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Rem quas tempore eos dicta neque dolorum accusamus odio ipsam laboriosam? 
@@ -49,6 +51,7 @@
                     Obcaecati expedita ratione natus mollitia. Reiciendis, odit. 
                     Asperiores laboriosam libero nemo quaerat, error totam mollitia, sequi obcaecati vel necessitatibus expedita quam debitis.
                 </p>
+            </article> 
             <article>
                 <img src="img/louis-hansel-K47107aP8UU-unsplash.jpg">
                 <h2>Boook a Table </h2>
